added generic base service and pagination
